--- a/RRHH_backend/.env
+++ b/RRHH_backend/.env
@@ -1,5 +1,4 @@
 MONGODB_URI="mongodb+srv://webseobilbao:GCjfpC6OP9FSUOUF@rrhhvue.ttu7ud4.mongodb.net/"
 PORT=3200
 MY_SECRET='32we4rd2wqr52rqf`´ç'
-ALLOWED_ROUTES="/,/locations,/login,/logout,/assets,/js,/css"
-
+ALLOWED_ROUTES="/,/locations,/login,/logout,/js/chunk-vendors.b727d413.js,/js/app.534a231d.js,/js/ListLocations.ee3fa7d3.js,/css/app.e904348a.css,/css/app.e904348a.css,/css/ListLocations.1f231ee4.css,/logorrhh.png,/logofooter.png,/bakq.png,/erandio.png,/sucursal.png,/favicon.ico,/ubicacion.svg,/img/rrhh.89865587.png"
